@@ -1,3 +1,7 @@
+1998-07-23  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* glclock.cc (glclock): Add an exception handler.
+
 1998-07-19  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* TODO: Updated.
